Clean up syntax