@@ -5,7 +5,8 @@ This GUI implementation uses external [engine], were you can contribute.
 [engine]: https://github.com/lipinskipawel/game-engine
 
 ## Building from source
- - JDK 12
+ - JDK 13
  - maven at least version `3.6.0`
+ - fill `application.properties` with token.name and token.value or provide environment variable
  - execute `mvn clean package`
- - run `java -jar target/football-game.jar` and start playing
+ - run `java -jar --enable-preview target/football-game.jar` and start playing
